--- a/pom.xml
+++ b/pom.xml
@@ -70,14 +70,14 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>${javafx.maven.plugin.version}</version>
                 <configuration>
-                    <mainClass>com.lab2.exercise2.HelloWorldApp</mainClass>
+                    <mainClass>com.lab3.exercise1.EnhancedJavaAnimation</mainClass>
                 </configuration>
                 <executions>
                     <execution>
                         <!-- Configuration for debugging -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.lab2.exercise2.HelloWorldApp</mainClass>
+                            <mainClass>com.lab3.exercise1.EnhancedJavaAnimation</mainClass>
                         </configuration>
                     </execution>
                 </executions>
